--- a/src/components/r-checkbox-group/r-checkbox-group.css
+++ b/src/components/r-checkbox-group/r-checkbox-group.css
@@ -1,4 +1,4 @@
-/* Checkbox group container */
+/* Checkbox group container - Professional Design */
 .r-checkbox-group {
   display: inline-flex;
   flex-wrap: wrap;
