--- a/src/components/r-collapse/r-collapse.css
+++ b/src/components/r-collapse/r-collapse.css
@@ -1,4 +1,4 @@
-/* Collapse container */
+/* Collapse container - Professional Design */
 .r-collapse {
   border: 1px solid var(--r-color-border);
   border-radius: var(--r-radius-large);
