--- a/src/components/r-dropdown-menu/r-dropdown-menu.css
+++ b/src/components/r-dropdown-menu/r-dropdown-menu.css
@@ -1,4 +1,4 @@
-/* Dropdown menu container */
+/* Dropdown menu container - Professional Design */
 .r-dropdown-menu {
   list-style: none;
   margin: 0;
