--- a/src/components/r-input-number/r-input-number.css
+++ b/src/components/r-input-number/r-input-number.css
@@ -1,4 +1,4 @@
-/* Input Number container */
+/* Input Number container - Professional Design */
 .r-input-number {
   display: inline-flex;
   align-items: stretch;
