--- a/src/components/r-radio-group/r-radio-group.css
+++ b/src/components/r-radio-group/r-radio-group.css
@@ -1,4 +1,4 @@
-/* Radio group container */
+/* Radio group container - Professional Design */
 .r-radio-group {
   display: inline-flex;
   flex-wrap: wrap;
