--- a/src/components/r-form/r-form.css
+++ b/src/components/r-form/r-form.css
@@ -1,4 +1,4 @@
-/* Form container */
+/* Form container - Professional Design */
 .r-form {
   width: 100%;
 }
@@ -14,5 +14,3 @@
 .r-form--inline .r-form-item {
   margin-bottom: 0;
 }
-
-/* Label positions handled by form-item */
